decktracker-overlay (visual): fix tooltip being hidden / cropped

--- a/Files/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
+++ b/Files/src/css/component/decktracker/overlay/decktracker-overlay.component.scss
@@ -84,7 +84,7 @@
 	}
 
 	tooltips {
-		z-index: 1;
+		z-index: 2;
 		pointer-events: none;
 
 		::ng-deep tooltip {
